[project]
name = "tsa-throughput"
version = "0.1.0"
description = ""
authors = [
    {name = "Joel Peach",email = "jpeach@ricondo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "tqdm (>=4.67.3,<5.0.0)",
]

[tool.poetry]
packages = [{include = "tsa_throughput", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
